--- a/package.json
+++ b/package.json
@@ -10,14 +10,15 @@
   "license": "ISC",
   "devDependencies": {
     "gulp": "^4.0.2",
-    "gulp-autoprefixer": "^6.1.0",
-    "gulp-plumber": "^1.2.1",
-    "gulp-sass": "^4.0.2",
-    "gulp-sourcemaps": "^2.6.5",
-    "gulp-uglify": "^3.0.2",
-    "readable-stream": "^3.4.0"
+    "gulp-sass": "^5.1.0",
+    "sass": "^1.71.1"
   },
   "dependencies": {
-    "gulp-update": "0.0.2"
+    "gulp-autoprefixer": "^8.0.0",
+    "gulp-plumber": "^1.2.1",
+    "gulp-sourcemaps": "^3.0.0",
+    "gulp-uglify": "^3.0.2",
+    "gulp-update": "0.0.2",
+    "readable-stream": "^4.4.0"
   }
 }
